--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cloudinary": "^2.5.0",
     "jose": "^5.9.3",
     "mongoose": "^8.6.2",
-    "next": "14.2.10",
+    "next": "^14.0.0",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^16.12.0",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
